force-app/main/default/objects/SummarizedCommission__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalType__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Accounting User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommissionAmount__c</fullName>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Month_Year__c</fullName>
        <label>Commission Month/Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MgrApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mgr Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Summarized_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodEndDate__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeriodStartDate__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuotaActual__c</fullName>
        <label>Quota Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QuotaGoal__c</fullName>
        <label>Quota Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep New</fullName>
                </value>
                <value>
                    <fullName>Sales Associate</fullName>
                </value>
                <value>
                    <fullName>Sales Rep Renewal</fullName>
                </value>
                <value>
                    <fullName>Add On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Summarized_Commissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Summarized Commission</label>
    <nameField>
        <label>Summarized Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summarized Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>